# supermechs-bot

./: .env.example  .gitignore  Procfile  SM.py  SM_classes.py  UltraMech.py  __main__.py  bot.py  config.ini  config.py  config.toml  discotools.py  enums.py  functions.py  image_manipulation.py  images.py  lib_helpers.py  lib_types.py  pyproject.toml  requirements.txt  ui_components.py  utils.py
SuperMechs/: __init__.py  constants.py  core.py  enums.py  errors.py  game_types.py  images.py  inv_item.py  item.py  mech.py  pack_interface.py  pack_versioning.py  player.py  server.py  sm_base.py  stat_handler.py  types.py  typeshed.py  utils.py
SuperMechs/GameData/: StatData.json  default_powers.csv  lm_item_powers.csv  reduced_powers.csv
SuperMechs/ext/: wu_compat.py
SuperMechs/static/: StatData.json
SuperMechs/typedefs/: game_types.py  pack_versioning.py
app/: __init__.py  __main__.py  assets.py  async_utils.py  bot.py  config.py  events.py  files.py  i18n.py  lib_helpers.py  library_extensions.py  main.py  managers.py  meta.py  typeshed.py  user_input.py
app/SuperMechs/: api.py  client.py  converters.py  core.py  enums.py  errors.py  images.py  inv_item.py  item.py  mech.py  pack_interface.py  player.py  stat_handler.py  state.py  urls.py  utils.py
app/SuperMechs/ext/: wu_compat.py
app/SuperMechs/ext/stat_comparison/: converter.py  stat_comparator.py
app/SuperMechs/rendering/: __init__.py  attachments.py  images.py  pack_renderer.py  sprites.py
app/SuperMechs/static/: lm_item_powers.csv
app/SuperMechs/typedefs/: __init__.py  game_types.py  graphics.py  pack_versioning.py  packs.py
app/abstract/: files.py
app/assets/: emojis.toml  urls.toml
app/bridges/: __init__.py  autocompleters.py  context.py  injectors.py  listeners.py  player.py  player_factory.py
app/discord_extensions/: __init__.py  commands.py  embed_utils.py  error_handling.py  extensions.py  file_utils.py  limits.py  pending.py  text_utils.py  typeshed.py
app/discord_extensions/ui/: action_row.py  buttons.py  helpers.py  selects.py  views.py
app/extensions/: arena_buffs.py  bot_status.py  code_eval.py  item_lookup.py  mech_manager.py  setup.py
app/extensions/item_lookup/: __init__.py  helpers.py  item_lookup.py
app/extensions/mech_management/: __init__.py  mech_manager.py
app/library_extensions/: __init__.py  bot.py  embed_helpers.py  error_handling.py  extension_manager.py  interaction_context.py  logging.py  pending.py  text_formatting.py  text_utils.py
app/library_extensions/ui/: __init__.py  action_row.py  buttons.py  helpers.py  selects.py  views.py
app/manager/: __init__.py  manager.py
app/shared/: __init__.py  decorators.py  metrics.py  session.py  utils.py
app/shared/manager/: __init__.py  async_manager.py  manager.py
app/ui/: __init__.py  action_row.py  buttons.py  item.py  selects.py  views.py
assets/: emojis.toml
commands/: arena_buffs.py  item_lookup.py  mech_builder.py  misc.py  setup.py
game_locale/: de.toml  en.toml  en_US.toml  pl.toml
locale/: en_US.toml  pl.json  pl.toml
shared/: __init__.py
tests/: comparator.py  example_item_v2.json  example_item_v3.json  incomplete_item_v3.json  items.py  pack_interface.py
ui/: __init__.py  action_row.py  buttons.py  item.py  selects.py  views.py
