[project]
name = "supermechs-bot"
authors = [
    {name = "Eneg"}
]
requires-python = ">= 3.10"
dependencies = [
    "aiohttp == 3.8.*",
    "attrs == 22.1.*", # >= 22.1.0 for python 3.11
    "disnake == 2.9.*", # Range/String; >= 2.8 for python 3.11
    "git+https://github.com/Chromosomologist/disnake-ext-plugins",
    "psutil == *",
    "python-dotenv == 0.19.*",
    "rtoml == *",
    "typing-extensions >= 4.4.1",
    # SM
    "git+https://github.com/Enegg/supermechs",
    "orjson == *",  # >= 3.7.7 for python 3.11
]
[project.optional-dependencies]
dev = [
    "ruff >= 0.0.291",
]

[tool.ruff]
select = ["E", "F", "G", "Q", "SIM", "TCH", "PTH", "RUF", "ASYNC"]

src = ["app"]
line-length = 100
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F403"]
"api.py" = ["F403"]

[tool.ruff.isort]
combine-as-imports = true
split-on-trailing-comma = false
extra-standard-library = ["typing_extensions"]
forced-separate = ["supermechs"]

[tool.ruff.flake8-type-checking]
exempt-modules = ["typing", "typing_extensions"]


[tool.pyright]
typeCheckingMode = "strict"
include = ["app"]

pythonVersion = "3.10"

reportUnnecessaryTypeIgnoreComment = true
reportUnnecessaryCast = true
reportMatchNotExhaustive = "warning"
reportUnusedImport = "warning"

reportOverlappingOverload = false
reportPrivateUsage = false
reportUnnecessaryIsInstance = false
reportFunctionMemberAccess = false
reportImportCycles = false
reportIncompatibleMethodOverride = false
reportIncompatibleVariableOverride = false

reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportMissingTypeStubs = false
